--- a/registr(GraphQL)/package.json
+++ b/registr(GraphQL)/package.json
@@ -1,24 +1,29 @@
 {
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
-    "joi": "^17.9.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
-  },
-  "name": "registr_with_graphql",
+  "name": "graphql",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NamigGuliyef/graphQL.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "bugs": {
+    "url": "https://github.com/NamigGuliyef/graphQL/issues"
+  },
+  "homepage": "https://github.com/NamigGuliyef/graphQL#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3"
+  }
 }
