--- a/registr(Apollo_server)/package.json
+++ b/registr(Apollo_server)/package.json
@@ -3,6 +3,7 @@
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3"
   },
@@ -10,7 +11,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
