--- a/graphql-Typescript/package.json
+++ b/graphql-Typescript/package.json
@@ -4,20 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx tsc && nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.16.2",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
+    "joi": "^17.9.2",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
